// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match can be parsed 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "test",
        },
        "operator": "=",
        "right": Match {
          "body": Array [
            MatchEntry {
              "keys": Array [
                Boolean {
                  "kind": "boolean",
                  "raw": "true",
                  "value": true,
                },
              ],
              "kind": "matchentry",
              "value": String {
                "isDoubleQuote": false,
                "kind": "string",
                "raw": "'yes'",
                "unicode": false,
                "value": "yes",
              },
            },
            MatchEntry {
              "keys": Array [
                Boolean {
                  "kind": "boolean",
                  "raw": "false",
                  "value": false,
                },
              ],
              "kind": "matchentry",
              "value": String {
                "isDoubleQuote": false,
                "kind": "string",
                "raw": "'no'",
                "unicode": false,
                "value": "no",
              },
            },
            MatchEntry {
              "keys": Array [
                DefaultKeyword {
                  "kind": "defaultkeyword",
                  "raw": "default",
                },
              ],
              "kind": "matchentry",
              "value": NullKeyword {
                "kind": "nullkeyword",
                "raw": "null",
              },
            },
          ],
          "kind": "match",
          "test": Variable {
            "curly": false,
            "kind": "variable",
            "name": "a",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`match can have lhs, functions 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "test",
        },
        "operator": "=",
        "right": Match {
          "body": Array [
            MatchEntry {
              "keys": Array [
                Call {
                  "arguments": Array [
                    Variable {
                      "curly": false,
                      "kind": "variable",
                      "name": "a",
                    },
                  ],
                  "kind": "call",
                  "what": Name {
                    "kind": "name",
                    "name": "test",
                    "resolution": "uqn",
                  },
                },
                Call {
                  "arguments": Array [
                    Variable {
                      "curly": false,
                      "kind": "variable",
                      "name": "b",
                    },
                  ],
                  "kind": "call",
                  "what": Name {
                    "kind": "name",
                    "name": "abc",
                    "resolution": "uqn",
                  },
                },
              ],
              "kind": "matchentry",
              "value": String {
                "isDoubleQuote": false,
                "kind": "string",
                "raw": "'yes'",
                "unicode": false,
                "value": "yes",
              },
            },
            MatchEntry {
              "keys": Array [
                DefaultKeyword {
                  "kind": "defaultkeyword",
                  "raw": "default",
                },
              ],
              "kind": "matchentry",
              "value": NullKeyword {
                "kind": "nullkeyword",
                "raw": "null",
              },
            },
          ],
          "kind": "match",
          "test": Boolean {
            "kind": "boolean",
            "raw": "true",
            "value": true,
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`match can have multiple values 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "test",
        },
        "operator": "=",
        "right": Match {
          "body": Array [
            MatchEntry {
              "keys": Array [
                Number {
                  "kind": "number",
                  "value": "0",
                },
                Number {
                  "kind": "number",
                  "value": "1",
                },
                Number {
                  "kind": "number",
                  "value": "2",
                },
                Number {
                  "kind": "number",
                  "value": "3",
                },
              ],
              "kind": "matchentry",
              "value": Call {
                "arguments": Array [],
                "kind": "call",
                "what": Name {
                  "kind": "name",
                  "name": "run",
                  "resolution": "uqn",
                },
              },
            },
            MatchEntry {
              "keys": Array [
                DefaultKeyword {
                  "kind": "defaultkeyword",
                  "raw": "default",
                },
              ],
              "kind": "matchentry",
              "value": NullKeyword {
                "kind": "nullkeyword",
                "raw": "null",
              },
            },
          ],
          "kind": "match",
          "test": Name {
            "kind": "name",
            "name": "trye",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
